ELK/kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: elasticsearch-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
#  tls:
#    - hosts:
#        - dev10.dmai.com
#      secretName: dev10-cert
  rules:
  - host: es.dev10.dmai.com
    http:
      paths:
      - path: /
        backend:
          serviceName: quickstart-es-http
          servicePort: 9200
